syntax = "proto3";

package ucas.refund;

service RefundService {
  rpc CreateRefund(RefundRequest) returns (RefundResponse);
  rpc RetrieveRefund(RetrieveRefundRequest) returns (RefundResponse);
  rpc UpdateRefund(RefundUpdateRequest) returns (RefundResponse);
  rpc ListRefunds(RefundListRequest) returns (RefundListResponse);
}

message RefundRequest {
  // TODO: Fill in fields
}

message RetrieveRefundRequest {
  string refund_id = 1;
}

message RefundUpdateRequest {
  string refund_id = 1;
  // TODO: Fill in fields
}

message RefundListRequest {
  // TODO: Fill in fields
}

message RefundResponse {
  // TODO: Fill in fields
}

message RefundListResponse {
  // TODO: Fill in fields
}
